syntax = "proto3";

option csharp_namespace = "ToDoGrpc";

import "google/api/annotations.proto";

package todo;

service ToDo {

    // create
    rpc CreateToDo(CreateToDoRequest) returns (CreateToDoResponse) {};
    // read-single
    rpc ReadToDo(ReadToDoRequest) returns (ReadToDoResponse) {};
    // read-list
    rpc ListToDo(GetAllRequest) returns (GetAllResponse) {
        option (google.api.http) = {
            get: "/v1/todo/All"
        };
    };
    // update
    rpc UpdateToDo(UpdateToDoRequest) returns (UpdateToDoResponse) {};
    // delete
    rpc DeleteToDo(DeleteToDoRequest) returns (DeleteToDoResponse) {};

}

message CreateToDoRequest{
    string Title = 1;
    string Description = 2;
}

message CreateToDoResponse{
    int32 id = 1;
}

message ReadToDoRequest{
    int32 id = 1;
}

message ReadToDoResponse{
    int32 id = 1;
    string Title = 2;
    string Description = 3;
    string Status = 4;
}

message GetAllRequest{}

message GetAllResponse{
    repeated ReadToDoResponse response = 1;
}

message UpdateToDoRequest{
    int32 id = 1;
    string Title = 2;
    string Description = 3;
    string Status = 4;
}

message UpdateToDoResponse{
    int32 id = 1;
}

message DeleteToDoRequest{
    int32 id = 1;
}

message DeleteToDoResponse{
    int32 id = 1;
}